added: register with email

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -69,8 +69,8 @@
             <p>Enter your email</p>
           </div>
           <div>
-            <input type="text" placeholder="Email">
-            <input type="submit">
+            <input id="js-email" type="text" placeholder="Email">
+            <input id="js-btn-subscribe" type="submit">
           </div>
         </div>
       </div>
