added: load more forecast

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -47,7 +47,9 @@
         </div>
         <div class="main-sub-content js-forecasts">
         </div>
+        <button id="js-btn-forecasts" style="margin: 20px 0px; border: none; background-color: transparent; cursor: pointer;">load more</button>
       </div>
+      
 
       <div class="sub-content">
         <div>
