added: history search with JWT, cookie - Fixed: clean index.js

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -55,7 +55,7 @@
         <div>
           <p>History Search</p>
         </div>
-        <div class="main-sub-content"></div>
+        <div class="main-sub-content js-histories"></div>
       </div>
       
     </section>
